K Nico God Bless u

--- a/Clases/clase02-speaker.html
+++ b/Clases/clase02-speaker.html
@@ -851,7 +851,7 @@ Carlos Andrés Yanes <a href="https://orcid.org/0000-0003-0683-3727" class="quar
 <p>Esto nos da apenas el equivalente de certeza: <span class="math display">\[\mathbb{EC}  = 2.549.994\]</span></p>
 </div>
 <div class="fragment">
-<p>Paso(4): Calcular la prima de riesgo]</p>
+<p>Paso(4): Calcular la prima de riesgo</p>
 <p><span class="math display">\[\mathbb{P}.\mathbb{R}= Valor\;Esperado - Equivalente \; Certeza\]</span></p>
 </div>
 <div class="fragment">
@@ -2517,6 +2517,251 @@ Carlos Andrés Yanes <a href="https://orcid.org/0000-0003-0683-3727" class="quar
 <p>La función de producción <span class="math inline">\(+\)</span> los precios de los insumos no da <span class="math inline">\(\rightarrow\)</span> <span class="alert">Curva de costo total</span></p>
 </div>
 </div>
+</section>
+<section id="costos-1" class="slide level2">
+<h2>Costos</h2>
+<ul>
+<li class="fragment"><p><span class="alert">P:</span> ¿Cómo decide una empresa cuánta producción debe realizar?</p></li>
+<li class="fragment"><p>Para aumentar los beneficios, ¿debe producir más o menos unidades?</p></li>
+<li class="fragment"><p><span class="blut">R:</span> Piense en el margen.</p></li>
+</ul>
+<div class="fragment">
+<blockquote>
+<p>Si el costo de las unidades adicionales es inferior a los ingresos por su venta, los beneficios aumentan a medida que se incrementa la producción.</p>
+</blockquote>
+</div>
+<div class="fragment">
+<p>Si el costo de las unidades adicionales es <span class="under">superior</span> a los ingresos por su venta, los beneficios disminuyen al aumentar la producción.</p>
+</div>
+</section></section>
+<section>
+<section id="costo-marginal" class="title-slide slide level1 center" data-background-color="#006dae">
+<h1>Costo Marginal</h1>
+
+</section>
+<section id="costo-marginal-1" class="slide level2">
+<h2>Costo Marginal</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-49-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<h3 id="definición-2">Definición</h3>
+<p>Variación del costo total derivado de un aumento de la producción de una unidad adicional.</p>
+</div>
+</div>
+</section>
+<section id="costo-marginal-2" class="slide level2" data-visibility="uncounted">
+<h2>Costo Marginal</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-50-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<h3 id="definición-3">Definición</h3>
+<p>Variación del costo total derivado de un aumento de la producción de una unidad adicional.</p>
+</div>
+</div>
+</section>
+<section id="costo-marginal-3" class="slide level2">
+<h2>Costo Marginal</h2>
+<ul>
+<li class="fragment"><p>Recuerde que <span class="math inline">\(\text{Costo Total}= \text{Costo Fijo}+ \color{red}{\text{Costo Variable}}\)</span></p></li>
+<li class="fragment"><p>Los <span class="bg" style="--col: #FFFF00">Costos fijos</span> no contribuyen al costo marginal, ya que no dependen de la producción.</p></li>
+<li class="fragment"><p>Los <span class="alert">Costos fijos</span> tienden a absorverse cuando la producción se vende en gran proporción. P.e: Arriendo de 200 millones pero se vende 5000 millones de pesos</p></li>
+<li class="fragment"><p>Los <span class="oranger">Costos variables</span> si se asocian con lo producido. P.e: mas producción requiere mas material. Estos contribuyen al costo marginal de la empresa.</p></li>
+</ul>
+</section></section>
+<section>
+<section id="costo-fijo-vs-variable" class="title-slide slide level1 center" data-background-color="#006dae">
+<h1>Costo Fijo vs Variable</h1>
+
+</section>
+<section id="costo-fijo-vs-variable-1" class="slide level2">
+<h2>Costo Fijo vs Variable</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-51-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<p>Los <span class="alert">Costos fijos</span> no varian con la producción <br> Los <span class="oranger">Costos variables</span> se afectan cuando la producción varía</p>
+</div>
+</div>
+</section>
+<section id="costo-fijo-vs-variable-2" class="slide level2">
+<h2>Costo Fijo vs Variable</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-52-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<h3 id="costo-fijo-promedio-afc">Costo fijo promedio (AFC)</h3>
+<p>Este costo resulta de dividir el costo fijo entre la producción total <span class="math inline">\(CF \div Q\)</span></p>
+</div>
+</div>
+</section>
+<section id="costo-fijo-vs-variable-3" class="slide level2">
+<h2>Costo Fijo vs Variable</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-53-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<h3 id="costo-variable-promedio-avc">Costo variable promedio (AVC)</h3>
+<p>El costo resulta de dividir el costo variable entre la producción <span class="math inline">\(CV \div Q\)</span></p>
+</div>
+</div>
+</section>
+<section id="costo-fijo-vs-variable-4" class="slide level2">
+<h2>Costo Fijo vs Variable</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-54-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<h3 id="costo-total-medio-atc">Costo total medio (ATC)</h3>
+<p>Es el costo que resulta de dividir el conjunto de costos entre la producción. Tambien sumando <span class="math inline">\(AFC+AVC=\color{red}{ATC}\)</span></p>
+</div>
+</div>
+</section>
+<section id="costo-fijo-vs-variable-5" class="slide level2" data-visibility="uncounted">
+<h2>Costo Fijo vs Variable</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-55-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<h3 id="costo-total-medio-atc-1">Costo total medio (ATC)</h3>
+<p>Es el costo que resulta de dividir el conjunto de costos entre la producción. Tambien sumando <span class="math inline">\(AFC+AVC=\color{red}{ATC}\)</span></p>
+<blockquote>
+<p>Escala eficiente: en Q que minimiza ATC</p>
+</blockquote>
+</div>
+</div>
+</section>
+<section id="costo-fijo-vs-variable-6" class="slide level2">
+<h2>Costo Fijo vs Variable</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-56-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<p>Escala eficiente <span class="blut">Q que minimiza el ATC</span>.</p>
+<p>Q &lt; escala eficiente: La caída del AFC reduce el ATC.</p>
+<p>Q &gt; escala eficiente: El aumento del AVC aumenta el ATC.</p>
+</div>
+</div>
+</section>
+<section id="costo-fijo-vs-variable-7" class="slide level2">
+<h2>Costo Fijo vs Variable</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-57-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<p>MC &lt; ATC <span class="math inline">\(\longrightarrow\)</span> ATC está bajando.</p>
+<p>MC &gt; ATC <span class="math inline">\(\longrightarrow\)</span> ATC <span class="blut">aumenta</span>.</p>
+<p><span class="bg" style="--col: #FFFF00">MC se cruza ATC</span> en el Q que minimiza ATC.</p>
+</div>
+</div>
+</section>
+<section id="costo-fijo-vs-variable-8" class="slide level2" data-visibility="uncounted">
+<h2>Costo Fijo vs Variable</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="clase02_files/figure-revealjs/unnamed-chunk-58-1.svg" class="quarto-figure quarto-figure-center" width="480"></p>
+</figure>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:40%;">
+<p>MC &lt; ATC <span class="math inline">\(\longrightarrow\)</span> ATC está bajando.</p>
+<p>MC &gt; ATC <span class="math inline">\(\longrightarrow\)</span> ATC <span class="blut">aumenta</span>.</p>
+<p><span class="bg" style="--col: #FFFF00">MC se cruza ATC</span> en el Q que minimiza ATC.</p>
+</div>
+</div>
+</section>
+<section id="costo-fijo-vs-variable-9" class="slide level2">
+<h2>Costo Fijo vs Variable</h2>
+<h3 id="short-run">Short-Run</h3>
+<p>Algunos insumos son fijos.</p>
+<ul>
+<li class="fragment"><p>Por ejemplo, terrenos, fábricas, robots de cadena de montaje, etc.</p></li>
+<li class="fragment"><p>Insumos fijos <span class="math inline">\(\longrightarrow\)</span> costo fijo.</p></li>
+</ul>
+<h3 id="long-run">Long-Run</h3>
+<p>Todos los insumos son variables</p>
+<ul>
+<li class="fragment"><p>Las empresas pueden construir nuevas fábricas o vender las existentes.</p></li>
+<li class="fragment"><p>Las empresas utilizan la combinación más eficiente de insumos para cualquier Q (por ejemplo, la fábrica con menor ATC).</p></li>
+</ul>
 </section>
 <section id="gracias-por-su-atención" class="slide level2 center">
 <h2>Gracias! por su atención</h2>
