--- a/README.html
+++ b/README.html
@@ -362,6 +362,8 @@ display: none;
 1</a></p>
 <p><a href="https://keynes37.github.io/Espeval/Clases/clase02.html">Clase
 2</a></p>
+<p><a href="https://keynes37.github.io/Espeval/Clases/clase03.html">Clase
+3</a></p>
 </div>
 </div>
 
