--- a/Clases/clase03.html
+++ b/Clases/clase03.html
@@ -2766,7 +2766,7 @@ Img=&amp; p(q) + \frac{\partial p(q)}{\partial q}q\\
 <p><span class="math display">\[(10-3 \times 2)+ (-3)2= 4-6= -2 \; \text{moneda local}\]</span></p>
 </div>
 <ul>
-<li class="fragment">El efecto <strong>positivo</strong> es solo ganarse 4, porque ahora vende una unidad adicional. Pero de lo .RUred[negativo] al vender una unidad adicional tiene que hacerlo reduciendo su beneficio en 2 unidades monetarias.</li>
+<li class="fragment">El efecto <strong>positivo</strong> es solo ganarse 4, porque ahora vende una unidad adicional. Pero de lo <span class="alert">negativo</span> al vender una unidad adicional tiene que hacerlo reduciendo su beneficio en 2 unidades monetarias.</li>
 </ul>
 </section>
 <section id="ejercicio-2" class="slide level2">
